syntax = "proto3";

package api.notifications.v1;

import "api/notifications/v1/messages.proto";

option go_package = "github.com/go-chat/notifications/pkg/api/v1;notificationsv1";

// NotificationService handles notification history and status
// Note: Real-time notifications are delivered via SSE, not gRPC
service NotificationService {
  // GetNotifications retrieves notification history for a user
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  
  // MarkAsRead marks a notification as read
  rpc MarkAsRead(MarkAsReadRequest) returns (MarkAsReadResponse);
}

